[gd_scene load_steps=2 format=3 uid="uid://cp60i4v27hr2r"]

[ext_resource type="Script" uid="uid://djxreaqyldgab" path="res://ui/MainMenu.gd" id="1_b00nv"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b00nv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.0
offset_top = -64.0
offset_right = 39.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "OWLBOYS"

[node name="StartButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="OptionsButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Options
"

[node name="QuitButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="OptionsPanel" type="Panel" parent="CanvasLayer/CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer/OptionsPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="FullscreenCheck" type="CheckBox" parent="CanvasLayer/CenterContainer/VBoxContainer/OptionsPanel/VBoxContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="MasterVolume" type="HSlider" parent="CanvasLayer/CenterContainer/VBoxContainer/OptionsPanel/VBoxContainer"]
layout_mode = 2

[node name="BackButon" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer/OptionsPanel/VBoxContainer"]
layout_mode = 2
text = "Back"
